--- a/docs/.vuepress/userConfig.json
+++ b/docs/.vuepress/userConfig.json
@@ -1,6 +1,6 @@
 {
-  "title": "The 5th Wave",
-  "description": "Test",
+  "title": "BCC Documentation",
+  "description": "BCC Documentation description",
   "base": "/bcc-docs-template/",
   "repo": "Kurczak1233/bcc-docs-template"
 }
