--- a/.github/workflows/build-documentation.yml
+++ b/.github/workflows/build-documentation.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v2
         with:
-          repository: Kurczak1233/VuePress-CI-CD
+          repository: Kurczak1233/bcc-docs-template 
 
       # Pull the repository documentation and push it to the source folder
       - name: Check out test repository
@@ -32,8 +32,8 @@ jobs:
         env:
           title: BCC Documentation CI/CD
           description: BCC Documentation description CI/CD
-          base: /bcc-docs-template/
-          repo: Kurczak1233/bcc-docs-template
+          base: /VuePress-CI-CD/
+          repo: Kurczak1233/VuePress-CI-CD
 
       # Build the VuePress site
       - name: Build VuePress site
@@ -46,7 +46,7 @@ jobs:
           # deploy the default output dir of VuePress
           build_dir: docs/.vuepress/dist
           target_branch: gh-pages
-          repo: Kurczak1233/bcc-docs-template
+          repo: Kurczak1233/VuePress-CI-CD
         env:
           # @see https://docs.github.com/en/actions/reference/authentication-in-a-workflow#about-the-github_token-secret
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
